高速詠唱術式カートリッジを1.20.1 Forge向けに補正